Added changes for making a deposit to the selected account
Added changes for making a deposit to the selected account

--- a/web_bank/bank/templates/bank/bankDetail.html
+++ b/web_bank/bank/templates/bank/bankDetail.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <a class='btn btn-primary btn-sm' href = "{% url 'deposit' %}">Go to Deposit</a> 
+            <a class='btn btn-primary btn-sm' href = "{% url 'deposit' bank.id %}">Go to Deposit</a> 
         </div>
     </div>
     <h2>Accaunt name: {{bank.name}}</h2>
