--- a/web_bank/bank/templates/bank/layout.html
+++ b/web_bank/bank/templates/bank/layout.html
@@ -22,9 +22,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href = "{% url 'index' %}">My Bank</a>
                   </li>
-                  <li class="nav-item">
+                  {% comment %} <li class="nav-item">
                     <a class="nav-link active" href = "{% url 'deposit' %}">Deposits</a>
-                  </li>
+                  </li> {% endcomment %}
                 </ul>
               </div>
             </div>
