--- a/web_bank/bank/templates/bank/bankDetail.html
+++ b/web_bank/bank/templates/bank/bankDetail.html
@@ -7,7 +7,7 @@
             <a class='btn btn-primary btn-sm' href = "{% url 'deposit' bank.id %}">Go to Deposit</a> 
         </div>
     </div>
-    <h2>Accaunt name: {{bank.name}}</h2>
+    <h2>Account name: {{bank.name}}</h2>
     <h2>Total Saved: $ {{bank.total | floatformat:2}}</h2>
     <div class="row">   
         <h3>Deposit Histoy</h3>
