--- a/web_bank/bank/templates/bank/deposit.html
+++ b/web_bank/bank/templates/bank/deposit.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container">
-    <h2>Deposit form</h2>
+    <h2>Deposit for {{acountName}} account</h2>
     <form method = 'POST'>
         {% csrf_token %}
         <div class="form-group">
