Update add account field
Adding allows withdraw checkbox to the add account form

--- a/web_bank/bank/templates/bank/newAccount.html
+++ b/web_bank/bank/templates/bank/newAccount.html
@@ -13,6 +13,10 @@
             {{account_form.amountValue.label_tag}}
             {{account_form.amountValue}}
         </div>
+        <div class="form-group">
+            {{account_form.withdraw.label_tag}}
+            {{account_form.withdraw}}
+        </div>
         <button type="submit" class="btn btn-primary">Add Account</button>
       </form>
 </div>
